--- a/djsite/dZENcode_test/comments/static/comments/css/styles.css
+++ b/djsite/dZENcode_test/comments/static/comments/css/styles.css
@@ -15,7 +15,7 @@ div.comments-count{
     margin-top: 50px;
 }
 
-div.popup-bg{
+div.popup-bg, div.open-file-popup-bg{
     position: fixed;
     width: 100%;
     height: 100%;
@@ -25,7 +25,7 @@ div.popup-bg{
     display: none;
 }
 
-div.popup{
+div.popup, div.open-file-popup{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -33,4 +33,9 @@ div.popup{
     background: #ffffff;
     padding: 20px;
     transform: translate(-50%, -50%);
+}
+
+img.file_img{
+    max-width: 100%;
+    height: auto;
 }
